--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,13 @@
 security:
   oauth2:
     client:
+      client-id: acme
+      client-secret: acmesecret
+      scope: read,write
+      auto-approve-scopes: '.*'
+
+facebook:
+    client:
       clientId: 236098910200696
       clientSecret: d68e9723b77969b420382fc089b781d0
       accessTokenUri: https://graph.facebook.com/oauth/access_token
@@ -10,3 +17,17 @@ security:
       clientAuthenticationScheme: form
     resource:
       userInfoUri: https://graph.facebook.com/me
+github:
+  client:
+    clientId: a28c5f5f56fe47fd5297
+    clientSecret: 031a2afc68e0d9bab36e761748ca03bed7767962
+    accessTokenUri: https://github.com/login/oauth/access_token
+    userAuthorizationUri: https://github.com/login/oauth/authorize
+    clientAuthenticationScheme: form
+  resource:
+    userInfoUri: https://api.github.com/user
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+      
