--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 #spring.datasource.url=jdbc:mysql://lastcall.chcylilsa5ge.us-west-2.rds.amazonaws.com:3306/lastCall
 #spring.datasource.username=lastCallMysql
 #spring.datasource.password=password
+spring.social.facebook.appId=236098910200696
+spring.social.facebook.appSecret=d68e9723b77969b420382fc089b781d0
